# tabularmapper

./: .env.example  .gitignore  BUILD_PROMPT.md  CHANGELOG.md  LICENSE  README.md  ai_matcher.py  bank_mapper.py  bank_mapper_api.py  cli.py  config.example.json  learn.py  make_fixtures.py  mapping_cache.py  pyproject.toml  requirements.txt  run-command.txt  schema.py  stores.py
.github/workflows/: publish-to-pypi.yml
demo/: demo.py
docs/: how-it-works.md  self-learning-synonyms.md
src/bank_statement_mapper/: __init__.py  bank_mapper.py  bank_mapper_api.py  cli.py  learn.py  llm_fallback.py  mapping_cache.py  schema.py  stores.py
src/schema_mapper/: __init__.py  ai_matcher.py  api.py  cli.py  engine.py  learn.py  mapping_cache.py  schema.py  stores.py
src/tabularmapper/: __init__.py  ai_matcher.py  api.py  cli.py  engine.py  learn.py  llm_fallback.py  mapping_cache.py  schema.py  stores.py
src/tabularmapper/static/: index.html  test.html
src/tabularmapper/web/: index.html
test_statements/: 01_junk_split.xlsx  02_title_signed.xlsx  03_header_row1_brackets.xlsx  04_garbage.xlsx  05_weird_header.xlsx  legacy_sample.xls
test_statements/confusing/: C13_split_multirow_header.xlsx
tests/: test_api.py  test_learn.py  test_mapper.py  test_schema.py  test_stores.py
