[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-statement-mapper"
version = "0.1.0"
description = "Map any bank statement .xlsx to a standard schema (deterministic + optional AI column matcher)"
readme = "README.md"
requires-python = ">=3.9"
# Core engine deps — required. The default build makes ZERO network calls.
dependencies = [
    "openpyxl>=3.1",
    "rapidfuzz>=3.0",
    "python-dateutil>=2.8",
    "redis>=7.0.1",
]

# The AI table matcher (ai_matcher.py) uses only the Python standard library
# (urllib) to call any OpenAI-compatible endpoint — no SDK dependency needed.
# Set OPENAI_API_KEY / OPENAI_BASE_URL / OPENAI_MODEL to enable it.

[project.optional-dependencies]
# Install with `.[api]` to expose the FastAPI router (bank_mapper_api.py).
api = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
]
# Storage backends for the mapping cache / learned store (URL-selected).
redis = ["redis>=5.0"]
valkey = ["valkey>=6.0"]
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
bank-mapper = "cli:main"

# Flat top-level modules (no src/ package). This is what makes the project
# pip/uv-installable so a FastAPI backend can depend on it directly.
[tool.setuptools]
py-modules = [
    "bank_mapper",
    "schema",
    "stores",
    "learn",
    "ai_matcher",
    "llm_fallback",
    "mapping_cache",
    "bank_mapper_api",
    "cli",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
