[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-statement-mapper"
version = "1.0.1"
description = "Map any bank statement .xlsx to a standard schema (deterministic + optional AI column matcher)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Karthikeyan Duraisamy", email = "karthikeyanduraisamy@kultivateindia.com" },
]
keywords = ["bank statement", "xlsx", "etl", "column mapping", "fintech", "openpyxl"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core engine deps — required. The default build makes ZERO network calls and
# needs no database driver (SQLite via the standard library).
dependencies = [
    "openpyxl>=3.1",
    "rapidfuzz>=3.0",
    "python-dateutil>=2.8",
]

# The AI table matcher uses only the standard library (urllib) to call any
# OpenAI-compatible endpoint — no SDK dependency. Set OPENAI_API_KEY etc.
[project.optional-dependencies]
api = ["fastapi>=0.110", "python-multipart>=0.0.9"]   # FastAPI router
redis = ["redis>=5.0"]                                 # redis:// cache/learn store
valkey = ["valkey>=6.0"]                               # valkey:// (Redis fork, e.g. Aiven)
postgres = ["psycopg[binary]>=3.1"]                    # postgresql:// store
dotenv = ["python-dotenv>=1.0"]                        # auto-load .env in the CLI

[project.urls]
Homepage = "https://github.com/KarthiKeyan05046/bank-statement-mapper"
Repository = "https://github.com/KarthiKeyan05046/bank-statement-mapper"
Issues = "https://github.com/KarthiKeyan05046/bank-statement-mapper/issues"

[project.scripts]
bank-mapper = "bank_statement_mapper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
